@@ -1,19 +1,10 @@
-system env:
-vagrant init debian/jessie64
-vagrant up
-
-database env:
-todo unzip -qo todoapp db/schema.sql
-todo unzip -qo todoapp db/rebuild.sh
-
 update service:
 ssh nonocast.cn -t todolist-update
+ssh nonocast.cn redis-cli flushall
 
 ts, react, webpack stack:
 webpack -watch
 
-create task url:
-curl -XPOST http://localhost:8080/api/tasks -H "Content-Type: application/x-www-form-urlencoded; charset=UTF-8" -H "Token: 3fea6af1349166ea" -d "content=hello-curl"
 
 todolist
 1. nginx https
@@ -25,6 +16,9 @@ todolist
 7. highcharts
 8. 用户登录注册
 9. 用户信息修改
+
+bug
+gradle/webpack在windows下失败
 
 master
 TODO: closedAt
