@@ -1,5 +1,12 @@
+database env:
+todo unzip -qo todoapp db/schema.sql
+todo unzip -qo todoapp db/rebuild.sh
+
 backup:
 mysqldump todolist > /var/www/todo/data/data-$( date '+%Y-%m-%d_%H-%M-%S' ).sql -u root -p12345678
+
+restore:
+mysql todolist -uroot -p12345678 < data.sql
 
 master
 
